-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u272
-
Component/s: hotspot
-
b04
in file genCollectedHeap.cpp, at function
void GenCollectedHeap::prepare_for_compaction() {
- guarantee(_n_gens = 2, "Wrong number of generations");
+ guarantee(_n_gens == 2, "Wrong number of generations");
}
void GenCollectedHeap::prepare_for_compaction() {
- guarantee(_n_gens = 2, "Wrong number of generations");
+ guarantee(_n_gens == 2, "Wrong number of generations");
}
- duplicates
-
JDK-8256672 [8u]Incorrect assignment operator used in guarantee() in genCollectedHeap
-
- Closed
-