8256671: Incorrect assignment operator used in guarantee() in genCollectedHeap

Reviewed-by: aph, phh, andrew